Market place static page added. Lineup optimizer fix date removed from all the requests. changes in sign up and plan subscription.

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -21,6 +21,9 @@
                 <a routerLink="/basics">DFS Basics</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/subscribe">Plans</a>
+              </li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/faq">FAQ</a>
               </li>
             </ul>
@@ -60,7 +63,7 @@
                 <a routerLink="/articles">Articles</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="/test">Marketplace</a>
+                <a routerLink="/market-place">Marketplace</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/news">Player News</a>
