--- a/src/app/admin/components/header/admin-header.component.html
+++ b/src/app/admin/components/header/admin-header.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="logo-box">
-      <a href="index.html" class="logo-text"><span>MLB</span></a>
+      <a href="#" class="logo-text"><span>Admin</span></a>
     </div><!-- Logo Box -->
     <div class="topmenu-outer">
       <div class="top-menu">
@@ -15,7 +15,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic" data-toggle="dropdown">
               <span class="user-name">Admin<i class="fa fa-angle-down"></i></span>
-              <img class="img-circle avatar" src="assets/images/avatar1.png" width="40" height="40" alt="">
+              <!--<img class="img-circle avatar" src="assets/images/avatar1.png" width="40" height="40" alt="">-->
             </a>
             <ul class="dropdown-menu dropdown-list" role="menu">
               <li role="presentation"><a (click) = "onReleaseOptionClicked()" disabled><i class="fa fa-sign-out m-r-xs"></i>Release</a></li>
@@ -25,11 +25,11 @@
             <a class="log-out waves-effect waves-button waves-classic" (click)="logoutUser()"><span><i class="fa fa-sign-out m-r-xs"></i>Log out</span>
             </a>
           </li>
-          <li>
-            <a href="javascript:void(0);" class="waves-effect waves-button waves-classic" id="showRight">
-              <i class="fa fa-comments"></i>
-            </a>
-          </li>
+          <!--<li>-->
+            <!--<a href="javascript:void(0);" class="waves-effect waves-button waves-classic" id="showRight">-->
+              <!--<i class="fa fa-comments"></i>-->
+            <!--</a>-->
+          <!--</li>-->
         </ul><!-- Nav -->
       </div><!-- Top Menu -->
     </div>
