- Provider bios edit - WIP (TODO - @hirenparekh)

--- a/src/app/admin/components/left-bar/left-bar.component.html
+++ b/src/app/admin/components/left-bar/left-bar.component.html
@@ -18,7 +18,7 @@
         </li> -->
       <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/members']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Members</p></a>
       </li>
-      <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/providers']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Providers</p></a>
+      <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/providers']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p style="color: white;">Analysts</p></a>
       </li>
       <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/pages']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>CMS Pages</p></a>-->
       <!--</li>-->
