--- a/src/app/admin/components/providers/edit.component.html
+++ b/src/app/admin/components/providers/edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-inner">
   <div class="page-title">
-    <h3>Edit Provider</h3>
+    <h3>Edit Analyst</h3>
   </div>
   <div id="main-wrapper">
     <div class="row">
