--- a/src/app/admin/components/providers/edit.component.html
+++ b/src/app/admin/components/providers/edit.component.html
@@ -10,7 +10,7 @@
             <h4 class="panel-title">Add Provider</h4>
           </div>
           <div class="panel-body">
-            <form (ngSubmit)="onProvidersUpdate(f)" #f="ngForm" class="form-horizontal">
+            <form (ngSubmit)="onProvidersEdit(f)" #f="ngForm" class="form-horizontal">
               <div class="form-group">
                 <label for="input-Default" class="col-sm-2 control-label">First Name</label>
                 <div class="col-sm-10">
