--- a/src/app/front/components/provider-public/public.component.css
+++ b/src/app/front/components/provider-public/public.component.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 
+.btn-yellow {background: #f8c534;}
+
 * {margin:0; padding:0; outline:0; box-sizing:border-box; }
 body {margin:0; padding:0; font-family: 'Roboto', sans-serif; font-size:14px; line-height:normal; color:#2f2f2f; background:#ffc525;}
 html,body{}
@@ -791,7 +793,7 @@ font-size: 15px;line-height: 23px;width: 100px;text-align: center;padding: 6px;}
         .linUpSection .linUpFrm > .form-group{display: inline-block; margin-bottom: 0px; vertical-align: middle; margin-left: 10px;}
         .linUpSection .linUpFrm > .form-group:first-child{margin-left: 0px;}
         .linUpSection .linUpFrm > .form-group > .form-group{float: left; margin-bottom: 0px;}
-        .linUpSection .linUpFrm > .form-group > .form-group .form-control {min-width: 60px; max-width: 60px; border-radius: 0px;}
+        .linUpSection .linUpFrm > .form-group > .form-group .form-control {min-width: 60px; max-width: 180px; border-radius: 0px;}
         
         .linUpSection .tFormat table .subsHide{}
         .linUpSection .tFormat table .subsHideTbl{display: none;}
