--- a/src/app/user/components/uploads/uploads.component.html
+++ b/src/app/user/components/uploads/uploads.component.html
@@ -62,21 +62,21 @@
                               (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone>
                   </div>
                   <div class="dUpldBxRght">
-                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn1.png" alt=""
+                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="../../../../assets/images/dUpld_icn1.png" alt=""
                                                                                 class="img-responsive"/></span><span
                       class="gTxt">How do I get my results data from FanDuel?</span></a>
-                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn2.png" alt=""
+                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="../../../../assets/images/dUpld_icn2.png" alt=""
                                                                                 class="img-responsive"/></span><span
                       class="gTxt">How do I get my results data from DraftKings?</span></a>
-                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn3.png" alt=""
-                                                                                class="img-responsive"/></span><span
-                      class="gTxt">How do I get my results data from Yahoo?</span></a>
-                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn4.png" alt=""
-                                                                                class="img-responsive"/></span><span
-                      class="gTxt">How do I get my results data from FantasyDraft?</span></a>
-                    <a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn5.png" alt=""
-                                                                                class="img-responsive"/></span><span
-                      class="gTxt">How do I get my results data from DraftDay?</span></a>
+                    <!--<a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn3.png" alt=""-->
+                                                                                <!--class="img-responsive"/></span><span-->
+                      <!--class="gTxt">How do I get my results data from Yahoo?</span></a>-->
+                    <!--<a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn4.png" alt=""-->
+                                                                                <!--class="img-responsive"/></span><span-->
+                      <!--class="gTxt">How do I get my results data from FantasyDraft?</span></a>-->
+                    <!--<a href="javascript:void(0)"><span class="icnWrapperS"><img src="images/dUpld_icn5.png" alt=""-->
+                                                                                <!--class="img-responsive"/></span><span-->
+                      <!--class="gTxt">How do I get my results data from DraftDay?</span></a>-->
                   </div>
                 </div>
 
