--- a/src/app/user/components/settings/settings.component.html
+++ b/src/app/user/components/settings/settings.component.html
@@ -20,6 +20,21 @@
             <div class="dashboardMain">
               <div class="dTabs">
                 <div>
+                  <div class="settings-content" *ngIf="activeTab=='image'">
+                    <form class="form-horizontal" #f="ngForm">
+                      <div>
+                        <h1 class="dashboardMainHedin">Upload Files</h1>
+                        <p class="dashboardMainPara">Alternatively, you can drag and drop an entry history file below.</p>
+                        <div class="dUpldBxWrapper" style="border-bottom: transparent !important;">
+                          <div class="dUpldBxLft">
+                            <dropzone [config]="configUpload" class="file-drop-zone" [message]="'Drop file here'"
+                                      (error)="onUploadError($event)"
+                                      (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
                   <div class="settings-content" *ngIf="activeTab=='profile'">
                     <form class="form-horizontal" #f="ngForm">
                       <div class="form-group">
